--- a/pbo project/pbo project.csproj
+++ b/pbo project/pbo project.csproj
@@ -120,6 +120,12 @@
     <Compile Include="menu admin\supplier.Designer.cs">
       <DependentUpon>supplier.cs</DependentUpon>
     </Compile>
+    <Compile Include="menu pegawai\barang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="menu pegawai\barang.Designer.cs">
+      <DependentUpon>barang.cs</DependentUpon>
+    </Compile>
     <Compile Include="menu pegawai\menu pegawai 1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -241,6 +247,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="menu admin\supplier.resx">
       <DependentUpon>supplier.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="menu pegawai\barang.resx">
+      <DependentUpon>barang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="menu pegawai\menu pegawai 1.resx">
       <DependentUpon>menu pegawai 1.cs</DependentUpon>
