--- a/pbo project/pbo project.csproj
+++ b/pbo project/pbo project.csproj
@@ -144,6 +144,12 @@
     <Compile Include="menu admin\mnakun.Designer.cs">
       <DependentUpon>mnakun.cs</DependentUpon>
     </Compile>
+    <Compile Include="menu pegawai\menu rekap data.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="menu pegawai\menu rekap data.Designer.cs">
+      <DependentUpon>menu rekap data.cs</DependentUpon>
+    </Compile>
     <Compile Include="menu pegawai\pop up add cust.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -155,6 +161,12 @@
     </Compile>
     <Compile Include="menu pegawai\pop up bayar.Designer.cs">
       <DependentUpon>pop up bayar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="menu admin\menu rekap data.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="menu admin\menu rekap data.Designer.cs">
+      <DependentUpon>menu rekap data.cs</DependentUpon>
     </Compile>
     <Compile Include="pop up\pop delete gagal.cs">
       <SubType>Form</SubType>
@@ -272,11 +284,17 @@
     <EmbeddedResource Include="menu admin\mnakun.resx">
       <DependentUpon>mnakun.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="menu pegawai\menu rekap data.resx">
+      <DependentUpon>menu rekap data.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="menu pegawai\pop up add cust.resx">
       <DependentUpon>pop up add cust.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="menu pegawai\pop up bayar.resx">
       <DependentUpon>pop up bayar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="menu admin\menu rekap data.resx">
+      <DependentUpon>menu rekap data.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pop up\pop delete gagal.resx">
       <DependentUpon>pop delete gagal.cs</DependentUpon>
